--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/crm?createDatabaseIfNotExist=true
-spring.datasource.username=@sql.name@
-spring.datasource.password=@sql.password@
+spring.config.import=optional:file:.env[.properties]
+spring.datasource.url=jdbc:mysql://localhost:3306/${DB_NAME}?createDatabaseIfNotExist=true
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_USERPASSWORD}
 spring.jpa.hibernate.ddl-auto=none
-spring.sql.init.mode=always
+spring.sql.init.mode=never
 
-spring.security.oauth2.client.registration.google.client-id=YourClientId
-spring.security.oauth2.client.registration.google.client-secret=YourClientSecret
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.scope=openid,email,profile
 spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
 spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
@@ -15,7 +16,7 @@ spring.security.oauth2.client.registration.google.authorization-uri-template=htt
 
 
 weather.api.url=http://api.weatherapi.com/v1/current.json
-weather.api.key=YourApiKey
+weather.api.key=${WEATHER_API_KEY}
 
 app.base-url=http://localhost:8080/
 
