--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,8 @@ weather.api.key=${WEATHER_API_KEY}
 app.base-url=http://localhost:8080/
 
 company.name=Easy to build
+
+# JWT Configuration
+# 256 bits
+jwt.secret=${JWT_SECRET} 
+jwt.expiration.ms=86400000
